# Brooke

./: .gitignore  Cargo.toml  dinpatch.xml  input_events.csv  project.md  sample_IOEvents.csv  scenarios.xml  slot_1_count.csv  telemetry.db  us_flow_device.xml
.git-backup/: COMMIT_EDITMSG  ORIG_HEAD  index  packed-refs
.git-backup/info/: refs
.git-backup/logs/: HEAD
.git-backup/logs/refs/heads/: master
.git-backup/objects/info/: commit-graph  packs
.git-backup/refs/heads/: master
conf/: aga8_density.xml  config.xml  gc_mb_device.xml  namespace.xml  namespace.yml
conf/calculations/: aga8_density.xml
conf/processors/: flow_pulses_pr.xml  running_average.xml
src/: main.rs
