[package]
name = "laminar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
bridge = { path = "../AliIO-Testing/bridge", features = ["host"] }
host = { path = "../AliIO-Testing/host" }
iojss = { path = "../brooklyn" }
async-trait = "0.1"
env_logger = "0.11"
csv-async = { version = "1.3.1", features = ["tokio"] }
serde = { version = " 1.0.219", features = ["derive"] }
tokio-serial = "5.4.5"
serde_json = "1.0.142"

[dev-dependencies]
tempfile = "3.0"
